overflow problem solved on stories

--- a/style-1.css
+++ b/style-1.css
@@ -243,7 +243,7 @@ h4 {
   justify-content: center;
   align-items: center;
   padding: 0 80px;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   cursor: pointer;
 
   /* flex-direction: row; */
@@ -251,7 +251,7 @@ h4 {
 .items {
   display: grid;
   border: 1px solid gray;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   height: 160px;
   width: 100vw;
   border-radius: 8px;
